botones de redireccion

--- a/FormRegistro.html
+++ b/FormRegistro.html
@@ -53,5 +53,13 @@
     <br>
     <br>
     <button> Enviar </button>
+    <br>
+    <br>
  </body>
+ <footer>
+  <a href="./index.html">Ir al ejercicio 1</a>  
+    <br>
+    <br>
+  <a href="./Listaanidada.html">Ir al ejercicio 2</a>
+</footer>
 </html>
