--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <li>2022:<b> Copa Mundial de la FIFA- Qatar 2022</b></li>
     </ul>
 </body>
-
+<footer>
+    <a href="./Listaanidada.html">Ir al ejercicio 2</a>
+    <br>
+    <br>
+    <a href="./FormRegistro.html">Ir al ejercicio 3</a>
+</footer>
    
-    </html>
+</html>
